fixed video; cut off first and last seconds

--- a/css/photo.css
+++ b/css/photo.css
@@ -1,7 +1,11 @@
-.modal-dialog {}
-.thumbnail {margin-bottom:6px;}
+/*.modal-dialog {}*/
+.thumbnail {
+	margin-bottom: 6px;
+	cursor: pointer;
+}
 
-.carousel-control.left,.carousel-control.right{
+.carousel-control.left,
+.carousel-control.right {
   background-image:none;
   margin-top:10%;
   width:5%;
